2004-03-25  Derek Price  <derek@ximbiot.com>

	* system.h: No longer fold back slashes in paths into slashes.

2004-03-25  Derek Price  <derek@ximbiot.com>

	* realloc.c: Update to more recent version from GNULIB to fix a WOE32
	compilation problem.

2004-03-20  Derek Price  <derek@ximbiot.com>

	* mkdir.c (mkdir): Declare string args const.

2004-03-13  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Add error.h.
	* Makefile.in: Regenerated.

2004-03-11  Derek Price  <derek@ximbiot.com>

	* xsize.h: Move the default definition of SIZE_MAX into
	windows-NT/config.h.in.

2004-03-07  Derek Price  <derek@ximbiot.com>

	* xsize.h: Provide a default definition of SIZE_MAX for Windows.

2004-02-20  Derek Price  <derek@ximbiot.com>

	Import xalloc module from GNULIB, as well as its remaining unimported
	dependency, the exitfail module.

	* Makefile.am (libcvs_a_SOURCES): Add new sources.
	* exitfail.c, exitfail.h, xalloc.h, xmalloc.c, xstrdup.c: New files.
	* Makefile.in: Regenerated.

2004-02-15  Derek Price  <derek@ximbiot.com>

	Import vasnprintf module from GNULIB.
	* asnprintf.c, printf-args.c, printf-args.h, printf-parse.c,
	printf-parse.h, vasnprintf.c, vasnprintf.h: New files.
	* Makefile.am (libcvs_a_SOURCES): Add header files.

2004-02-15  Derek Price  <derek@ximbiot.com>

	Import xsize module from GNULIB for vasnprintf().
	* xsize.h: New file.
	* Makefile.am (libcvs_a_SOURCES): Add xsize.h.

2004-02-15  Derek Price  <derek@ximbiot.com>

	Import alloca module from GNULIB for vasnprintf().
	* alloca_.h, alloca.c: New files.
	* .cvsignore: Ignore alloca.h.
	* Makefile.am: Compile alloca() when necessary.
	* Makefile.in: Regenerated.

2004-02-15  Derek Price  <derek@ximbiot.com>

	Make error() accessible to the GNULIB functions.

	* error.h: Move in from ../src.

2004-02-15  Derek Price  <derek@ximbiot.com>

	* strerror.c: Update to latest version from gnulib.

2003-12-14  Mark D. Baushke  <mdb@cvshome.org>
