@@ -1,0 +1,70 @@
+# Microsoft Developer Studio Generated Dependency File, included by LIB.mak
+
+.\exitfail.c : \
+	"..\windows-NT\config.h"\
+	".\exit.h"\
+	".\exitfail.h"\
+	
+
+.\getdate.c : \
+	"..\windows-NT\config.h"\
+	".\xtime.h"\
+	
+
+.\getline.c : \
+	"..\windows-NT\config.h"\
+	".\getline.h"\
+	".\getndelim2.h"\
+	
+
+.\getndelim2.c : \
+	"..\windows-NT\config.h"\
+	".\getndelim2.h"\
+	".\unlocked-io.h"\
+	
+
+.\getopt.c : \
+	"..\windows-NT\config.h"\
+	".\getopt.h"\
+	".\gettext.h"\
+	
+
+.\getopt1.c : \
+	"..\windows-NT\config.h"\
+	".\getopt.h"\
+	
+
+".\printf-args.c" : \
+	"..\windows-NT\config.h"\
+	".\printf-args.h"\
+	
+
+".\printf-parse.c" : \
+	"..\windows-NT\config.h"\
+	".\printf-args.h"\
+	".\printf-parse.h"\
+	".\xsize.h"\
+	
+
+.\realloc.c : \
+	"..\windows-NT\config.h"\
+	
+
+.\regex.c : \
+	"..\windows-NT\config.h"\
+	".\alloca.h"\
+	".\regex.h"\
+	
+
+!IF  "$(CFG)" == "LIB - Win32 Release"
+
+!ELSEIF  "$(CFG)" == "LIB - Win32 Debug"
+
+!ENDIF 
+
+!IF  "$(CFG)" == "LIB - Win32 Release"
+
+!ELSEIF  "$(CFG)" == "LIB - Win32 Debug"
+
+!ENDIF 
+
