@@ -1,3 +1,9 @@
+2004-03-26  Derek Price  <derek@ximbiot.com>
+
+	* LIB.dep, lib.dsp, lib.mak: New files.
+	* Makefile.am (EXTRA_DIST): Add new files.
+	* .cvsignore: Ignore MSVC build cruft.
+
 2004-03-25  Derek Price  <derek@ximbiot.com>
 
 	* system.h: No longer fold back slashes in paths into slashes.
